<resources>
    <string name="app_name">Archtest</string>

    <string name="btn_cats">Cats</string>
    <string name="btn_cats_paginated">Cats (Paginated)</string>
    <string name="btn_chuck_norris">Chuck Norris</string>
    <string name="btn_next_joke">Next joke</string>
    <string name="btn_test_ground">Test Ground</string>
    <string name="btn_plus">Plus</string>
    <string name="btn_minus">Minus</string>
    <string name="btn_star_wars">Star Wars</string>
    <string name="btn_bottom_nav">Bottom Navigation</string>
    <string name="btn_notifications">Notifications</string>
    <string name="btn_nav_to_four">Navigate to four</string>
    <string name="btn_nav_to_five">Navigate to five</string>
    <string name="btn_pop_up">Pop Up</string>
    <string name="btn_back_to_three">Back to three</string>
    <string name="btn_show_notification">Show notification</string>
    <string name="btn_show__deep_link_notification">Show deep link notification</string>

    <string name="hint_title">Title</string>
    <string name="hint_content">Content</string>
    <string name="hint_search">Search…</string>

    <string name="sw_films">Films</string>
    <string name="sw_people">People</string>
    <string name="sw_planets">Planets</string>
    <string name="sw_species">Species</string>
    <string name="sw_star_ships">Star ships</string>
    <string name="sw_vehicles">Vehicles</string>
    <string name="sw_director">Director:</string>
    <string name="sw_producer">Producer(s):</string>
    <string name="sw_episode">Episode</string>
    <string name="sw_homeworld">Homeworld</string>
    <string name="sw_mass">Mass</string>
    <string name="sw_height">Height</string>
    <string name="sw_dob">Birth Year</string>
    <string name="sw_name">Name</string>

    <string name="bottom_one">1</string>
    <string name="bottom_two">2</string>
    <string name="bottom_three">3</string>
    <string name="bottom_four">4</string>
    <string name="bottom_five">5</string>

    <string name="nav_one">One</string>
    <string name="nav_two">Two</string>
    <string name="nav_three">Three</string>
    <string name="nav_four">Four</string>
    <string name="nav_five">Five</string>

    <string name="error_not_found">Not found</string>
    <string name="error_access_denies">Access denied</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_service_unavailable">Service unavailable</string>
    <string name="error_test">Test error</string>
    <string name="error_no_joke">Unable to retrieve joke</string>
    <string name="error_invalid_host">Unable to connect host</string>


</resources>
