<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cats"
            style="@style/DefaultButton"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_cats_paginated"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cats_paginated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cats_paginated"
            style="@style/DefaultButton"
            app:layout_constraintTop_toBottomOf="@+id/btn_cats"
            app:layout_constraintBottom_toTopOf="@+id/btn_chuck_norris"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_chuck_norris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_chuck_norris"
            style="@style/DefaultButton"
            app:layout_constraintTop_toBottomOf="@+id/btn_cats_paginated"
            app:layout_constraintBottom_toTopOf="@+id/btn_test_ground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_test_ground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_test_ground"
            style="@style/DefaultButton"
            app:layout_constraintTop_toBottomOf="@+id/btn_chuck_norris"
            app:layout_constraintBottom_toTopOf="@+id/btn_star_wars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_star_wars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_star_wars"
            style="@style/DefaultButton"
            app:layout_constraintTop_toBottomOf="@+id/btn_test_ground"
            app:layout_constraintBottom_toTopOf="@+id/btn_bottom_nav"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_bottom_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_bottom_nav"
            style="@style/DefaultButton"
            app:layout_constraintTop_toBottomOf="@+id/btn_star_wars"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>