<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".notifictions.NotificationFragment">

    <data>
        <variable
            name="notificationVm"
            type="com.exail.archtest.notifictions.view.model.NotificationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/notification_title_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_16"
            android:hint="@string/hint_title"
            android:text="@={notificationVm.oNotificationTitle}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/notification_content_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_16"
            android:maxLines="6"
            android:hint="@string/hint_content"
            android:text="@={notificationVm.oNotificationContent}"
            app:layout_constraintTop_toBottomOf="@+id/notification_title_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_show_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_show_notification"
            style="@style/DefaultButton"
            app:layout_constraintTop_toBottomOf="@+id/notification_content_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_show_deep_link_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_show__deep_link_notification"
            style="@style/DefaultButton"
            app:layout_constraintTop_toBottomOf="@+id/btn_show_notification"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>