<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".bottom.NavFiveFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_five"
            android:textStyle="bold"
            android:textSize="@dimen/text_24"
            android:textColor="@color/text_black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_pop_up"
            style="@style/DefaultButton"
            app:layout_constraintTop_toBottomOf="@+id/label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_back_to_three"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back_to_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back_to_three"
            style="@style/DefaultButton"
            app:layout_constraintTop_toBottomOf="@+id/btn_back_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>