<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".sw.people.PersonFragment">

    <data>
        <variable
            name="personVm"
            type="com.exail.archtest.sw.view.model.PersonViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sw_bg_black">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/poster_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:imageRes="@{personVm.personImage}"
            android:adjustViewBounds="true"
            tools:src="@drawable/luke_skywalker"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.4"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="poster_view,homeworld_view"
            tools:layout_constraintTop_toBottomOf="@+id/poster_view"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/other_details"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/barrier"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_16"
            android:layout_marginEnd="@dimen/medium_16"
            android:layout_marginStart="@dimen/medium_16"
            style="@style/TextLabelSmall"
            android:text="@string/sw_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poster_view"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/medium_16"
            android:layout_marginStart="@dimen/medium_16"
            style="@style/TextLabel"
            android:text="@{personVm.name}"
            tools:text="@tools:sample/full_names"
            app:layout_constraintTop_toBottomOf="@+id/name_label"
            app:layout_constraintStart_toEndOf="@+id/poster_view"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dob_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_16"
            android:layout_marginEnd="@dimen/medium_16"
            android:layout_marginStart="@dimen/medium_16"
            style="@style/TextLabelSmall"
            android:text="@string/sw_dob"
            app:layout_constraintTop_toBottomOf="@+id/name_view"
            app:layout_constraintStart_toEndOf="@+id/poster_view"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dob_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/medium_16"
            android:layout_marginStart="@dimen/medium_16"
            style="@style/TextLabel"
            android:text="@{personVm.dob}"
            tools:text="@tools:sample/full_names"
            app:layout_constraintTop_toBottomOf="@+id/dob_label"
            app:layout_constraintStart_toEndOf="@+id/poster_view"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/height_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_16"
            android:layout_marginEnd="@dimen/medium_16"
            android:layout_marginStart="@dimen/medium_16"
            style="@style/TextLabelSmall"
            android:text="@string/sw_height"
            app:layout_constraintTop_toBottomOf="@+id/dob_view"
            app:layout_constraintStart_toEndOf="@+id/poster_view"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/height_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/medium_16"
            android:layout_marginStart="@dimen/medium_16"
            style="@style/TextLabel"
            android:text="@{personVm.height}"
            tools:text="@tools:sample/full_names"
            app:layout_constraintTop_toBottomOf="@+id/height_label"
            app:layout_constraintStart_toEndOf="@+id/poster_view"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mass_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_16"
            android:layout_marginEnd="@dimen/medium_16"
            android:layout_marginStart="@dimen/medium_16"
            style="@style/TextLabelSmall"
            android:text="@string/sw_mass"
            app:layout_constraintTop_toBottomOf="@+id/height_view"
            app:layout_constraintStart_toEndOf="@+id/poster_view"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mass_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/medium_16"
            android:layout_marginStart="@dimen/medium_16"
            style="@style/TextLabel"
            android:text="@{personVm.mass}"
            tools:text="@tools:sample/full_names"
            app:layout_constraintTop_toBottomOf="@+id/mass_label"
            app:layout_constraintStart_toEndOf="@+id/poster_view"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/homeworld_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_16"
            android:layout_marginEnd="@dimen/medium_16"
            android:layout_marginStart="@dimen/medium_16"
            style="@style/TextLabelSmall"
            android:text="@string/sw_homeworld"
            app:layout_constraintTop_toBottomOf="@+id/mass_view"
            app:layout_constraintStart_toEndOf="@+id/poster_view"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/homeworld_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/medium_16"
            android:layout_marginStart="@dimen/medium_16"
            style="@style/TextLabel"
            android:text="@{personVm.homeworld}"
            tools:text="@tools:sample/full_names"
            app:layout_constraintTop_toBottomOf="@+id/homeworld_label"
            app:layout_constraintStart_toEndOf="@+id/poster_view"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>